--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
           </li>
         </ul>        
       </nav>
-    </div>  
+    </div> 
+    
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Welcome!</h1>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et excepturi pariatur explicabo voluptate. Sapiente, ratione minima saepe quo accusantium animi fuga, culpa temporibus perspiciatis deleniti sunt aliquam, rerum corporis doloribus.</p>
+      </div>
+    </div>
     
     <div class="container mb-5">
         <h2 id="about-me">About Me</h2>
@@ -44,7 +51,7 @@
         <h2 id="top-albums">Top Albums</h2>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card" style="width: 18rem;">
+                <div class="top-card" >
                     <img class="img-fluid" src="https://i.ebayimg.com/images/g/1fQAAOSwMuFfHVUR/s-l500.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">The Dark Side of the Moon</h5>
@@ -55,7 +62,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card" style="width: 18rem;">
+                <div class="top-card">
                     <img class="img-fluid" src="https://i.ebayimg.com/images/g/4BAAAOSwsbVdb70F/s-l500.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">The Division Bell</h5>
@@ -66,8 +73,8 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://m.media-amazon.com/images/I/4193CgEeSfL._AC_SX466_.jpg" class="card-img-top" alt="...">
+                <div class="top-card" >
+                    <img class="img-fluid" src="https://m.media-amazon.com/images/I/4193CgEeSfL._AC_SX466_.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">The Joshua Tree</h5>
                       <h6 class="card-text">U2</h6>
@@ -77,8 +84,8 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
+                <div class="top-card" >
+                    <img class="img-fluid" src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">The Dark Side of the Moon</h5>
                       <h6 class="card-text">Pink Floyd</h6>
@@ -88,8 +95,8 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
+                <div class="top-card" >
+                    <img class="img-fluid" src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">The Dark Side of the Moon</h5>
                       <h6 class="card-text">Pink Floyd</h6>
@@ -99,8 +106,8 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card" style="width: 18rem;">
-                    <img src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
+                <div class="top-card" >
+                    <img class="img-fluid" src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">The Dark Side of the Moon</h5>
                       <h6 class="card-text">Pink Floyd</h6>
