--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <div class="container mb-5">
         <h2 id="top-albums">Top Albums</h2>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6">
+
+          <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="top-card" >
                     <img class="img-fluid" src="https://i.ebayimg.com/images/g/1fQAAOSwMuFfHVUR/s-l500.jpg" class="card-img-top" alt="...">
                     <img class="card-badge" src="https://images.unsplash.com/photo-1571172964276-91faaa704e1f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGVhcnR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="">
@@ -100,15 +101,15 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="top-card" >
-                    <img class="img-fluid" src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
-                    <img class="card-badge" src="https://images.unsplash.com/photo-1571172964276-91faaa704e1f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGVhcnR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="">
-                    <div class="card-body">
-                      <h5 class="card-title">The Dark Side of the Moon</h5>
-                      <h6 class="card-text">Pink Floyd</h6>
-                      <p class="card-text">Progressive Rock - 42:50</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
+                  <img class="img-fluid" src="https://i.picsum.photos/id/12/2500/1667.jpg?hmac=Pe3284luVre9ZqNzv1jMFpLihFI6lwq7TPgMSsNXw2w" class="card-img-top" alt="...">
+                  <img class="card-badge" src="https://images.unsplash.com/photo-1571172964276-91faaa704e1f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGVhcnR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">The Dark Side of the Moon</h5>
+                    <h6 class="card-text">Pink Floyd</h6>
+                    <p class="card-text">Progressive Rock - 42:50</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+              </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="top-card" >
@@ -122,12 +123,72 @@
                     </div>
                 </div>
             </div>
-        </div>
+          </div>
+    </div>
+
+    <div class="container">
+      <h2>Tracklist #2</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr class="bg-warning">
+            <th scope="col"></th>
+            <th scope="col">Track#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Artist</th>
+            <th scope="col">Track Duration</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="bg-info">
+            <th scope="row"></th>
+            <td>1</td>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>@mdo</td>
+            <td>3:10</td>
+          </tr>
+          <tr class="bg-warning">
+            <th scope="row"></th>
+            <td>2</td>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>@mdo</td>
+            <td>3:10</td>
+          </tr>
+          <tr class="bg-info">
+            <th scope="row"></th>
+            <td>3</td>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>@mdo</td>
+            <td>3:10</td>
+          </tr>
+          <tr class="bg-warning">
+            <th scope="row"></th>
+            <td>4</td>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>@mdo</td>
+            <td>3:10</td>
+          </tr>
+          <tr class="bg-info">
+            <th scope="row"></th>
+            <td>5</td>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>@mdo</td>
+            <td>3:10</td>
+          </tr>
+          <tr class="bg-warning">
+            <th scope="row"></th>
+            <td>6</td>
+            <td>Lorem ipsum dolor sit.</td>
+            <td>@mdo</td>
+            <td>3:10</td>
+          </tr>
+          
+        </tbody>
+      </table>
     </div>
 
     <div class="container mb-5">
 
-        <h2 id="tracklist" >Tracklist</h2>
+        <h2 id="tracklist" >Tracklist #1</h2>
 
         <table class="table table-sm table-dark">
             <thead>
