--- a/index.html
+++ b/index.html
@@ -136,50 +136,57 @@
             <th scope="col">Title</th>
             <th scope="col">Artist</th>
             <th scope="col">Track Duration</th>
+            <th scope="col"></th>
           </tr>
         </thead>
-        <tbody>
-          <tr class="bg-info">
+        <tbody id="tbody">
+          <tr id="bg-info" class="bg-info">
             <th scope="row"></th>
             <td>1</td>
             <td>Lorem ipsum dolor sit.</td>
             <td>@mdo</td>
             <td>3:10</td>
+            <td><button type="button" onclick="deleteFunc()" class="btn btn-danger">DELETE</button></td>
           </tr>
-          <tr class="bg-warning">
+          <tr id="bg-warning" class="bg-warning">
             <th scope="row"></th>
             <td>2</td>
             <td>Lorem ipsum dolor sit.</td>
             <td>@mdo</td>
             <td>3:10</td>
+            <td><button type="button" onclick="deleteFunc2()" class="btn btn-danger">DELETE</button></td>
           </tr>
-          <tr class="bg-info">
+          <tr id="bg-info" class="bg-info">
             <th scope="row"></th>
             <td>3</td>
             <td>Lorem ipsum dolor sit.</td>
             <td>@mdo</td>
             <td>3:10</td>
+            <td><button type="button" onclick="deleteFunc()" class="btn btn-danger">DELETE</button></td>
           </tr>
-          <tr class="bg-warning">
+          <tr id="bg-warning" class="bg-warning">
             <th scope="row"></th>
             <td>4</td>
             <td>Lorem ipsum dolor sit.</td>
             <td>@mdo</td>
             <td>3:10</td>
+            <td><button onclick="deleteFunc2()" type="button" class="btn btn-danger">DELETE</button></td>
           </tr>
-          <tr class="bg-info">
+          <tr id="bg-info" class="bg-info">
             <th scope="row"></th>
             <td>5</td>
             <td>Lorem ipsum dolor sit.</td>
             <td>@mdo</td>
             <td>3:10</td>
+            <td><button type="button" onclick="deleteFunc()" class="btn btn-danger">DELETE</button></td>
           </tr>
-          <tr class="bg-warning">
+          <tr id="bg-warning" class="bg-warning">
             <th scope="row"></th>
             <td>6</td>
             <td>Lorem ipsum dolor sit.</td>
             <td>@mdo</td>
             <td>3:10</td>
+            <td><button type="button" onclick="deleteFunc2()" class="btn btn-danger">DELETE</button></td>
           </tr>
           
         </tbody>
@@ -418,10 +425,14 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+
+  
     
 
-   
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>   
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>  
+<script src="script.js"></script>
 </body>
 </html>
